--- a/src/app/components/admin/admin-content-section/components/call-to-action/call-to-action-list/call-to-action-list.component.html
+++ b/src/app/components/admin/admin-content-section/components/call-to-action/call-to-action-list/call-to-action-list.component.html
@@ -105,10 +105,10 @@
                                [routerLink]="['/admin/call-to-action/', cta.id]">
                                 <i class="fa fa-eye"></i>
                             </a>
-                            <!-- * TODO: Change from staging.ddw.org to ddw.org  * -->
+
                             <a class="btn btn-default text-success btn-sm icon-btn sm-btn-flat user-tooltip ml-1"
                                matTooltip="Send For Review"
-                               href="mailto: ?subject=For review on DDW: {{cta.name}}&body=Please review this Call To Action from DDW.org: https://staging.ddw.org/admin/call-to-action/{{cta.id}}">
+                               href="mailto: ?subject=For review on DDW: {{cta.name}}&body=Please review this Call To Action from DDW.org: https://ddw.org/admin/call-to-action/{{cta.id}}">
                                 <i class="fa fa-envelope"></i>
                             </a>
                         </td>
