--- a/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
+++ b/src/app/components/admin/admin-page/admin-page-new/admin-page-new.component.html
@@ -392,7 +392,7 @@
                                                 id="contentSectionTop"
                                                 formControlName="contentSectionTop">
                                             <option value="">
-                                                --- Select Top Text Section (Required) ---
+                                                --- Select Top Text Section or select this to be blank---
                                             </option>
                                             <option *ngFor="let text of textSections$ | async"
                                                     [value]="text.id">
