Fixed issue where featured blog posts would seperate outside container if in ultra-wide view

--- a/src/app/components/pages/presenters/presenters.component.html
+++ b/src/app/components/pages/presenters/presenters.component.html
@@ -82,7 +82,7 @@
                                 allowfullscreen="allowfullscreen"
                                 frameborder="0"
                                 height="315"
-                                width="446"
+                                width="100%"
                                 [src]="videoUrl">
                         </iframe>
                         <img [src]="imageUrl"
