--- a/src/app/components/pages/news-and-media/news-and-media.component.html
+++ b/src/app/components/pages/news-and-media/news-and-media.component.html
@@ -83,7 +83,7 @@
                                 allowfullscreen="allowfullscreen"
                                 frameborder="0"
                                 height="315"
-                                width="446"
+                                width="100%"
                                 [src]="videoUrl">
                         </iframe>
                         <img [src]="imageUrl"
